--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ VITE_SITE_TAGLINE=Noticias tecnológicas mas relevantes
 VITE_CONTACT_EMAIL=contact@see4tech.com
 VITE_COPYRIGHT_TEXT=© 2024 See4Tech. Todos los derechos reservados.
 VITE_DEFAULT_NEWS_IMAGE=https://images.unsplash.com/photo-1488590528505-98d2b5aba04b
-VITE_SUBSCRIBE_URL=https://example.com/subscribe
-VITE_UNSUBSCRIBE_URL=https://example.com/unsubscribe
+VITE_SUBSCRIBE_URL=https://n8n.see4.tech/webhook/2235c3f1-5b0a-489e-a284-c8c962d8c555?suscribir=true
+VITE_UNSUBSCRIBE_URL=https://n8n.see4.tech/webhook/2235c3f1-5b0a-489e-a284-c8c962d8c555?suscribir=false
