--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ VITE_DEFAULT_NEWS_IMAGE=https://images.unsplash.com/photo-1488590528505-98d2b5ab
 VITE_SUBSCRIBE_URL=https://n8n.see4.tech/webhook/2235c3f1-5b0a-489e-a284-c8c962d8c555?suscribir=true
 VITE_UNSUBSCRIBE_URL=https://n8n.see4.tech/webhook/2235c3f1-5b0a-489e-a284-c8c962d8c555?suscribir=false
 VITE_HERO_BG_COLOR=#2B2B2B
-VITE_FOOTER_BG_COLOR=#2B2B2B
+VITE_FOOTER_BG_COLOR=#ffffff
 VITE_BODY_BG_COLOR=#ffffff
 VITE_HERO_FONT_COLOR=#ffffff
 VITE_FOOTER_FONT_COLOR=#ffffff
