--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ VITE_UNSUBSCRIBE_URL=https://n8n.see4.tech/webhook/2235c3f1-5b0a-489e-a284-c8c96
 VITE_HERO_BG_COLOR="#2B2B2B"
 VITE_FOOTER_BG_COLOR="#2B2B2B"
 VITE_BODY_BG_COLOR="#ffffff"
-VITE_HERO_FONT_COLOR="#E8EF62"
-VITE_FOOTER_FONT_COLOR="#E8EF62"
+VITE_HERO_FONT_COLOR="#ffffff"
+VITE_FOOTER_FONT_COLOR="#ffffff"
 VITE_TITLE_FONT_COLOR="#216B67"
 VITE_TEXT_FONT_COLOR="#374151"
 VITE_PUBDATE_FONT_COLOR="#216B67"
