--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ VITE_AUTHOR_FONT_COLOR="#216B67"
 VITE_READ_MORE_FONT_COLOR="#216B67"
 VITE_PAGINATION_FONT_COLOR="#216B67"
 VITE_IMAGE_TEXT_FONT_COLOR="#ffffff"
+VITE_MYSQL_HOST=149.56.126.143
+VITE_MYSQL_USER=remote_db_user
+VITE_MYSQL_PASSWORD=8Ts7AajeGJ6tFb&26T@mv2WNR7
+VITE_MYSQL_DATABASE=contenido
