--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ VITE_TITLE_FONT_COLOR="#216B67"
 VITE_TEXT_FONT_COLOR="#374151"
 VITE_PUBDATE_FONT_COLOR="#216B67"
 VITE_LOGO_URL=https://i.ibb.co/zJrNjLB/Original-Logo.png
-VITE_SITE_TAGLINE=Noticias tecnológicas mas relevantes
+VITE_SITE_TAGLINE=Noticias tecnológicas mas relevantes del dia
 VITE_CONTACT_EMAIL=contact@see4tech.com
 VITE_COPYRIGHT_TEXT=© 2024 See4Tech. Todos los derechos reservados.
 VITE_DEFAULT_NEWS_IMAGE=https://images.unsplash.com/photo-1488590528505-98d2b5aba04b
